--- a/package.json
+++ b/package.json
@@ -178,6 +178,7 @@
     "sqlite3": "^5.0.8",
     "svg-captcha": "^1.4.0",
     "swagger-ui-express": "^5.0.0",
+    "tinymce": "^4.1.0",
     "ts-node-dev": "^1.1.6",
     "unzipper": "0.9.15",
     "web3": "^4.0.3",
